# 3DNTerminal

./: .gitignore  AGENTS.md  ANNOUNCEMENT_DRAFTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_PROJECT_CONTENT.md  LICENSE  PHYSICS.md  PRIVATE_ROADMAP.md  README.md  config.toml  flake.nix  modularity.md  skill.md  test_settings.rs  todo.md
src/: config.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs  main.rs.bak
src/app/: events.rs  events.rs.bak  state.rs
src/effects/: binary_rain.rs  circuit.rs  crossfade.rs  mod.rs  neural.rs
src/terminal/: grid.rs  input.rs  mod.rs  traits.rs
src/ui/: button.rs  hamburger_menu.rs  hologram.rs  hologram.rs.bak  icons.rs  math.rs  mod.rs  notification.rs  overlay.rs  settings.rs  skill.rs  style.rs  tab_bar.rs  two_d.rs  two_d.rs.bak  window_controls.rs  window_controls.rs.bak
src/ui/skills/: a11y.rs  mod.rs  physics.rs  security.rs  settings.rs  themes.rs
