[package]
name = "threednterminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "3dnterm"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["winit", "wgpu"] }
portable-pty = "0.8"
tiny-skia = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
vte = "0.15.0"

[features]
default = []
effects-3d = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
